@@ -1,0 +1,12 @@
+
+#ifndef _SWFDEC_DECODER_INTERNAL_H_
+#define _SWFDEC_DECODER_INTERNAL_H_
+
+
+int swfdec_decoder_experimental(SwfdecDecoder *s);
+
+#define SWFDEC_DECODER_EXPERIMENTAL(s) swfdec_decoder_experimental(s)
+
+
+#endif
+
