@@ -13,6 +13,7 @@
 #include "swfdec_cache.h"
 #include "swfdec_debug.h"
 #include "swfdec_decoder.h"
+#include "swfdec_decoder_internal.h"
 #include "swfdec_font.h"
 #include "swfdec_image.h"
 #include "swfdec_layer.h"
